--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,7 +8,7 @@
 @import url('https://fonts.bunny.net/css?family=Nunito');
 
 body {
-    font-family: Helvetica, "Microsoft YaHei", Arial, sans-serif;
+    font-family: "Hiragino Mincho Pro", "MS Mincho", "Noto Serif JP", serif;
     font-size: 14px;
 }
 
@@ -36,6 +36,7 @@ body {
 
 .footer {
     position: absolute;
+    margin-top: 60px;
     bottom: 0;
     width: 100%;
     /* Set the fixed height of the footer here */
