--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,3 @@
-// resources/sass/app.scss
-
 @use 'variables' as *;
 
 // Fontawesome
@@ -7,12 +5,18 @@
 
 @import url('https://fonts.bunny.net/css?family=Nunito');
 
+$fa-font-path: "@fortawesome/fontawesome-free/webfonts";
+@import '@fortawesome/fontawesome-free/scss/fontawesome';
+@import '@fortawesome/fontawesome-free/scss/solid';
+@import '@fortawesome/fontawesome-free/scss/regular';
+@import '@fortawesome/fontawesome-free/scss/brands';
+
 body {
-    font-family: "Hiragino Mincho Pro", "MS Mincho", "Noto Serif JP", serif;
+    font-family: Helvetica, "Microsoft YaHei", Arial, sans-serif;
     font-size: 14px;
 }
 
-/* header */
+/* 头部导航栏样式 */
 .navbar-static-top {
     border-color: #e7e7e7;
     background-color: #fff;
@@ -23,14 +27,14 @@ body {
     margin-top: 0;
 }
 
-/* Sticky footer styles */
+/* 固定底部样式 */
 html {
     position: relative;
     min-height: 100%;
 }
 
 body {
-    /* Margin bottom by footer height */
+    /* 给底部留出空间 */
     margin-bottom: 60px;
 }
 
@@ -39,7 +43,7 @@ body {
     margin-top: 60px;
     bottom: 0;
     width: 100%;
-    /* Set the fixed height of the footer here */
+    /* 设置 footer 的固定高度 */
     height: 60px;
     background-color: #000;
 
@@ -59,7 +63,7 @@ body {
     }
 }
 
-/* User register page */
+/* 用户注册页面 */
 .register-page {
     img.captcha {
         cursor: pointer;
@@ -67,4 +71,46 @@ body {
         border-radius: 4px;
         padding: 3px;
     }
+}
+
+/* 话题列表页面 */
+.topics-index-page {
+    .topic-list {
+        .nav > li > a {
+            position: relative;
+            display: block;
+            padding: 5px 14px;
+            font-size: 0.9em;
+        }
+
+        a {
+            color: #444444;
+            text-decoration: none;
+        }
+
+        .meta {
+            font-size: 0.9em;
+            color: #b3b3b3;
+
+            a {
+                color: #b3b3b3;
+            }
+        }
+
+        .badge {
+            background-color: #d8d8d8 !important;
+        }
+
+        hr {
+            margin-top: 12px;
+            margin-bottom: 12px;
+            border: 0;
+            border-top: 1px solid #979da0;
+        }
+    }
+}
+
+/* 容器与底部间距 */
+#app > div.container {
+    margin-bottom: 100px;
 }
